Fixed file upload spacing issue

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -66,7 +66,7 @@ input[type="file"]::file-selector-button {
 	padding: 8px 16px;
 	font-size: 15px;
 	font-weight: 600;
-	margin: 6px 16px 10px 8px;
+	margin: 6px 16px 10px 0px;
 	text-decoration: none;
 	transition: all 10ms ease-in-out;
 	cursor: pointer;
@@ -86,6 +86,7 @@ input[type="file"]::file-selector-button {
 
 .form-text {
 	min-width: 120px;
+	text-align: left;
 }
 
 .navigation {
@@ -151,6 +152,8 @@ input[type="file"]::file-selector-button {
 	width: 100%;
 	max-width: 720px;
 	margin-bottom: 2rem;
+	text-align:  left;
+
 }
 
 .beta-banner {
@@ -679,6 +682,7 @@ footer {
 		width: 100%;
 		max-width: 720px;
 		margin-bottom: 2rem;
+		text-align:  left;
 	}
 
 	.description {
@@ -763,11 +767,11 @@ footer {
 		display:flex;
 		flex-wrap: nowrap;
 		flex-direction: column;
-		justify-content: left;
-		align-content: flex-start;
+		justify-content: start;
+		align-content: start;
+		align-items: start;
 		padding: 0px 0px 16px 0px;
 		width: 100%;
-		align-items: normal;
 	}
 
 	.download-pdf,
